--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
+    "build": "NODE_ENV=production webpack --progress --profile --colors",
     "npm-win-fix": "mkdir -p /home/vagrant/node_modules && ln -s /home/vagrant/node_modules /vagrant/node_modules"
   },
   "repository": {
@@ -14,15 +15,22 @@
   },
   "keywords": [
     "web",
-    "radio-t"	
+    "radio-t"
   ],
   "author": "Renat Nasyrov",
   "license": "ISC",
   "dependencies": {
-    "material-design-lite": "^1.0.6",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "superagent": "^1.4.0"
   },
   "devDependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^1.1.1",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
